tests/ui/inference/issue-72616.stderr
error[E0283]: type annotations needed
  --> $DIR/issue-72616.rs:22:37
   |
LL |         if String::from("a") == "a".try_into().unwrap() {}
   |                              --     ^^^^^^^^
   |                              |
   |                              type must be known at this point
   |
   = note: cannot satisfy `String: PartialEq<_>`
help: the following types implement trait `PartialEq<Rhs>`
  --> $SRC_DIR/core/src/bstr/traits.rs:LL:COL
   |
   = note: `String` implements `PartialEq<ByteStr>`
   |
   = note: `String` implements `PartialEq<ByteString>`
  --> $SRC_DIR/alloc/src/bstr.rs:LL:COL
   |
   = note: in this macro invocation
  ::: $SRC_DIR/alloc/src/bstr.rs:LL:COL
   |
   = note: in this macro invocation
   = note: this error originates in the macro `impl_partial_eq` (in Nightly builds, run with -Z macro-backtrace for more info)
help: try using a fully qualified path to specify the expected types
   |
LL -         if String::from("a") == "a".try_into().unwrap() {}
LL +         if String::from("a") == <&str as TryInto<T>>::try_into("a").unwrap() {}
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0283`.
